# Maxwell

./: CHANGELOG.md  Maxwell.cabal  README.md  stack.yaml
app/: ImageFunction.hs  Main.hs
benchmark/: Main.hs
src/: Globe.hs  ImageFunction.hs  InputManipulation.hs  Maxwell.hs  Turbo.hs
test/: InputManipulationSpec.hs  MainSpec.hs  MaxwellSpec.hs
