cabal-version:       2.4
name:                Maxwell
version:             0.0.0.0
synopsis:            vectorfields in color
description:         vectorfields in color
homepage:            https://github.com/Nolrai/Maxwell
bug-reports:         https://github.com/Nolrai/Maxwell/issues
license:             MIT
license-file:        LICENSE
author:              Chris Upshaw (From Yukari)
maintainer:          Chris Upshaw (From Yukari) <chrisaupshaw@gmail.com>
copyright:           2021 Chris Upshaw (From Yukari)
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.1

source-repository head
  type:                git
  location:            https://github.com/Nolrai/Maxwell.git

common common-options
  build-depends:       base ^>= 4.15.0.0
                     , relude
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , lens
                     , colour
                     , hip
  
  mixins:              base hiding (Prelude)
                     , relude
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  build-depends:       linear
                     , vector
  exposed-modules:     Turbo
                       ImageFunction
                       InputManipulation

executable Maxwell
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       Maxwell
                     , linear
                     , vector
                     , directory
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite Maxwell-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Maxwell
                     , hspec
                     , linear
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Maxwell-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , Maxwell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
